--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@
             <div class="navbar-logo">
                <div class="logo">
                   <img src="assets/icon/logo.png" alt="logo" class="logo-img">
-
+                        jhsdkjasdkasdja
                </div>
                <div class="navbar-links">
                   <div class="navbar-link">
